--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" /> <!-- TODO -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>encode.</title>
+    <title>incode.</title>
 
     <script>const global = globalThis;</script>
 
